--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@juxtacode/rollup-plugin-npm-dts",
-  "version": "0.0.1",
+  "version": "0.0.5",
   "description": "Rollup Plugin for npm-dts to generate a single declaration file",
-  "main": "dist/RollupPluginNPMDTS.js",
-  "module": "dist/RollupPluginNPMDTS.esm.js",
-  "unpkg": "dist/RollupPluginNPMDTS.js",
-  "types": "dist/RollupPluginNPMDTS.d.ts",
+  "main": "dist/RollupPluginNpmDts.js",
+  "module": "dist/RollupPluginNpmDts.esm.js",
+  "unpkg": "dist/RollupPluginNpmDts.js",
+  "types": "dist/RollupPluginNpmDts.d.ts",
   "since": "2021",
   "files": [
     "dist",
@@ -15,7 +15,8 @@
   "scripts": {
     "build": "rollup --c build/rollup.config.js",
     "test": "jest",
-    "semantic-release": "semantic-release"
+    "semantic-release": "semantic-release",
+    "publish": "npm publish --access public"
   },
   "repository": {
     "type": "git",
@@ -38,8 +39,11 @@
   "dependencies": {
     "@babel/core": "^7.16.0",
     "lodash": "^4.17.15",
-    "npm-dts": "^1.3.10",
+    "regenerator-runtime": "^0.13.9",
     "tslib": "^2.3.1"
+  },
+  "peerDependencies": {
+    "npm-dts": "^1.3.10"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.4",
